--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -15,6 +15,7 @@
   <link rel="icon" href="images/tinapacalabarlogo.jpg" type="image/jpeg">
   <link rel="stylesheet" href="styles/mainchamber.css">
   <script src="scripts/discover.js" defer></script>
+  <script src="scripts/visit.js"  defer></script>
 </head>
 <body>
   <header class="header-container">
@@ -23,8 +24,8 @@
       <span id="company-name">Chamber of Commerce</span>
     </div>
     <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" onclick="toggleMenu()">
-  <span class="bar open">&#9776;</span>  <!-- ☰ -->
-  <span class="bar close">&times;</span> <!-- × -->
+  <span class="open">&#9776;</span>  <!-- ☰ -->
+  <span class="close">&times;</span> <!-- × -->
 </button>
     <nav class="menu" role="navigation">
       <ul>
