--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,10 @@
       <img src="images/tinapacalabarlogo.jpg" alt="TinapaCalabar Chamber of Commerce Logo" class="logo">
       <span id="company-name">Chamber of Commerce</span>
     </div>
-    <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" onclick="toggleMenu()">&#9776;</button>
+    <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" onclick="toggleMenu()">
+      <span class="bar open">&#9776;</span>  <!-- ☰ -->
+      <span class="bar close">&times;</span> <!-- × -->
+    </button>
     <nav class="menu" role="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
