--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -116,6 +116,7 @@
             <p>&copy; <span id="currentyear"></span> Copyright | YamaWise</p>
             <p>Designed and Developed by Benjamin Effiong - WDD231</p>
             <p id="lastModified">Last Modification: <span id="modificationDate"></span></p>
+            <a href="https://www.loom.com/share/cd51360e25de417ba186ae60803ea5be?sid=99ce34af-6248-4405-9128-f9ce2b808a38" target="_blank">🎥 Watch Demo</a>
         </div>
     </footer>
 </body>
